[package]
name = "webhook_deploy"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
warp = "0.3.7"
lazy_static = "1.5.0"
[dependencies.tokio]
version="1.45.1"
features = ["rt-multi-thread","macros"]
